feat(profile): публичная статистика пользователя
